Finish porting old content; polish & style

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ layout: default
 
 <!-- Text omitted: Rails & Phoenix developer -->
 
-<h3>Hi there!</h3>
+<h2>Hi there!</h2>
 
-<p>I build <strong>sophisticated data-driven web applications</strong>, specializing in Ruby on Rails, Elixir & Phoenix, relational databases, and highly expressive code. I pride myself on finding clean, thorough, requisite solutions to the problems that matter, and on my dedication to my clients' big-picture business needs and end users' happiness.</p>
+<p>I build <strong>sophisticated data-driven web applications</strong>, specializing in Ruby on Rails, Elixir & Phoenix, relational data, power-user UIs, and highly expressive code. I pride myself on finding clean, thorough, requisite solutions to the problems that matter, and on my dedication to my clients' big-picture business needs and end users' happiness.</p>
 
 <div class="row">
   <div class="col-50">
@@ -51,6 +51,7 @@ layout: default
 <div>
   <h3>Thought of the day</h3>
 
-  <strong>TODO</strong>
-  <div class="b-quote js-quote"></div>
+  <div class="b-quote-container js-quote-container">
+    <span class="e-quote js-quote"></span>
+  </div>
 </div>
