--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@ permalink: /projects/
 
 <h1>Projects I'm proud of</h1>
 
-<div class="b-stack m-bordered">
+<div class="b-stack --bordered">
 
   <div>
     <div class="row">
