--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@ permalink: /resume/
 <h2>Summary</h2>
 
 <ul>
-  <li><strong>Full-stack development experience</strong> using Ruby on Rails and Elixir / Phoenix</li>
+  <li><strong>Experienced full-stack developer</strong> in Ruby on Rails and Elixir / Phoenix</li>
   <li><strong>Thorough, transparent planning process</strong> to ensure the product meets user needs</li>
   <li><strong>Focus on client & end-user needs</strong> in addition to technical details</li>
   <li><strong>Loyalty to my projects & clients</strong>, and their long-term success</li>
@@ -19,7 +19,7 @@ permalink: /resume/
 <h2>I consider myself good at</h2>
 
 <ul>
-  <li>Full-stack web development (favorite tools include: Elixir, Phoenix, Ruby, Rails, Git, Heroku, PostgreSQL, GraphQL, React, Apollo, SCSS)</li>
+  <li>Full-stack web development (favorite tools include: Elixir, Phoenix, Ruby, Rails, Git, Heroku, PostgreSQL, GraphQL, React, Apollo, LiveView)</li>
   <li>Writing expressive, well-factored, un-clever code that's easy to understand, maintain, and grow</li>
   <li>Building a clean, robust, low-maintenance test suite</li>
   <li>Designing, querying, growing, optimizing complex relational databases</li>
@@ -31,14 +31,26 @@ permalink: /resume/
 <h2>Things I've done</h2>
 
 <h3>
-  Partner & GlassFrog developer, <a href="https://www.holacracy.org/" target="_blank">HolacracyOne</a>
+  Co-founder & lead developer, <a href="https://rtl-prod.herokuapp.com/" target="_blank">Reassembling the Line</a>
+  <span class="b-resume-date">2016 - present</span>
+</h3>
+
+<ul>
+  <li>Planning, blueprinting, prototyping, releasing, and maintaining an experimental research application</li>
+  <li>Courting clients, planning & budgeting projects, money stuff, legal stuff</li>
+  <li>It turns out the entrepreneurship world demands different skills than the freelance web development world. Go figure.</li>
+</ul>
+
+<h3>
+  Partner & <a href="https://glassfrog.com/" target="_blank">GlassFrog</a> developer, <a href="https://www.holacracy.org/" target="_blank">HolacracyOne</a>
   <span class="b-resume-date">2017 - 2019</span>
 </h3>
 
 <ul>
-  <li>Maintenance, troubleshooting, and feature development on <a href="https://glassfrog.com/" target="_blank">GlassFrog</a>, the Holacracy data management platform</li>
-  <li>Assist in development of an iOS & Android companion app using Expo and React-Native</li>
-  <li>L2 customer request handling; bug report diagnosis & triaging</li>
+  <li><a href="https://github.com/topherhunt/grassflog-apollo#grassflog" target="_blank">Tackled the fascinating problem</a> of how to both 1) represent the current structure of an organization, and 2) represent proposed structural changes to the org structure, in a way that makes it easy to a) craft in a friendly "proposal builder" UI, b) detect conflicts between proposals, c) validate and execute, and d) summarize in human-readable terms after execution, even if the referenced records no longer exist.</li>
+  <li>Slack integrations (<a href="https://support.glassfrog.com/support/solutions/articles/9000120786-how-do-i-set-up-slack-integration-premium-" target="_blank">announcing proposals</a> and collecting accept/reject responses; <a href="https://support.glassfrog.com/support/solutions/articles/9000158803-how-do-i-enable-the-slack-mentions-for-roles-premium-" target="_blank">syncing an organization's roles</a> to Slack usergroups; <a href="https://support.glassfrog.com/support/solutions/articles/9000165450-how-to-request-projects-and-actions-of-other-roles-in-slack-premium-" target="_blank">making and responding to requests to a role</a> via Slack)</li>
+  <li><a href="https://www.activecampaign.com/" target="_blank">ActiveCampaign</a> contact list sync with heavy caching layer to work around ActiveCampaign's highly-throttled api</li>
+  <li>Logic for importing organization data from other Holacracy support tools, validating, and transforming the data to fit our schema</li>
 </ul>
 
 <h3>
@@ -56,8 +68,8 @@ permalink: /resume/
       <li>Generating PDFs with complex styling & layouts</li>
       <li>Scraping any website and storing newly found content in a database</li>
       <li>Machine learning (Prediction.io): training, querying, and evaluating accuracy</li>
-      <li>Dynamically generated custom charts using D3.js and AJAX</li>
-      <li>Taking incremental snapshots of a webpage, detecting changes (PhantomJS, ResembleJS)</li>
+      <li>Dynamically generated charts using D3.js</li>
+      <li>Detecting visual changes on a page by diffing before/after snapshots using ResembleJS</li>
       <li>Time tracking, project & client management, and invoicing</li>
     </ul>
   </li>
