Add more 'on my mind' items

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ layout: default
       <li><a href="https://www.youtube.com/watch?v=O6TtfK9gGvA" target="_blank">Surviving the framework hype</a></li>
       <li><a href="https://www.sciencematters.io/" target="_blank">Science Matters</a> - decentralized research</a></li>
       <li><a href="https://www.indiegogo.com/projects/holo-take-back-the-internet-shared-p2p-hosting-community-technology" target="_blank">Holo</a> - distributed P2P internet</li>
+      <li><a href="https://every-layout.dev/" target="_blank">Re-learn CSS layout</a></li>
+      <li><a href="https://bradleytaunt.com/html-like-1999/" target="_blank">Writing HTML like it's 1999</a></li>
     </ul>
   </div>
 </div>
