Update grid css

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@ permalink: /resume/
 <h2>I consider myself good at</h2>
 
 <ul>
-  <li>Full-stack web development (favorite tools include: Elixir, Phoenix, Ruby, Rails, Git, Heroku, PostgreSQL, GraphQL, React, Apollo, LiveView)</li>
+  <li>Full-stack web development (favorite tools include: Elixir, Phoenix, Ruby, Rails, Git, Heroku, PostgreSQL, React, GraphQL, Apollo, LiveView)</li>
   <li>Writing expressive, well-factored, un-clever code that's easy to understand, maintain, and grow</li>
   <li>Building a clean, robust, low-maintenance test suite</li>
   <li>Designing, querying, growing, optimizing complex relational databases</li>
